crates/vite_task_bin/tests/e2e_snapshots/fixtures/stdin-inheritance/snapshots/multiple tasks get null stdin.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> echo from-stdin | vp run -r read-stdin
~/packages/other$ read-stdin

$ read-stdin ⊘ cache disabled: no cache config

────────────────────────────────────────────────
[vp run] 0/2 cache hit (0%). (Run `vp run --details` for full details)
